--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{
     font-family: 'Poppins', sans-serif;
+    color: black;
+    background-color: white;
 }
 
 .container-1{
     display: flex;
+    margin-top: 150px;
     margin-bottom: 100px;
 }
 .side-border{
-    border-left: 7px solid red;
+    border-left: 7px solid blueviolet;
     border-radius: 2px;
 }
 .half-width{
@@ -24,6 +27,7 @@ body{
     font-size: 60px;
     margin-left: 15px;
 }
+
 .span-1{
     color: blue;
 }
@@ -36,7 +40,7 @@ p{
     color: black;
     font-size: 30px;
     padding: 10px;
-    border: 3px solid black;
+    border: 3px solid skyblue;
     border-radius: 15px;
     background-color: skyblue;
 }
@@ -49,6 +53,10 @@ p{
     margin-bottom: 100px;
     font-size: 50px;
 }
+
+
+
+
 
 .container-2{
     display: flex;
@@ -67,16 +75,16 @@ p{
     border-radius: 30px;
 }
 #box-1{
-    background-color: plum;
+    background-color: rgb(191, 229, 245);
     margin-left: 300px;
     margin-right: 35px;
 }
 #box-2{
-    background-color: plum;
+    background-color: rgb(248, 177, 248);
     margin-right: 35px;
 }
 #box-3{
-    background-color: plum;
+    background-color: rgb(247, 218, 165);
 }
 .card-title{
     font-size: 30px;
@@ -88,8 +96,34 @@ p{
 }
 
 
+#heading-3{
+    padding-top: 30px;
+    margin-left: 750px;
+    font-size: 50px;
+    color: rgb(57, 57, 110);
+}
+.contact-background{
+    background-color: rgb(180, 177, 177);
+}
+.container-3{
+    display: flex;
+    margin-left: 550px;
+    margin-bottom: 100px;
+}
 
-
+.my-info{
+    margin-right: 200px;
+    font-size: 25px;
+}
+.your-info{
+    font-size: 30px;
+}
+button{
+    font-size: 20px;
+    background-color: skyblue;
+    padding: 15px;
+    border-radius: 10px;
+}
 
 
 
@@ -105,5 +139,5 @@ p{
 }
 footer{
     background-color: black;
-    color: aliceblue;
+    color:white;
 }
